tests/fixtures/valid/multiple_tracks.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <trk>
    <name>Track 1</name>
    <trkseg>
      <trkpt lat="52.5200" lon="13.4050"><ele>34.5</ele></trkpt>
      <trkpt lat="52.5210" lon="13.4060"><ele>35.0</ele></trkpt>
    </trkseg>
  </trk>
  <trk>
    <name>Track 2</name>
    <trkseg>
      <trkpt lat="52.5300" lon="13.4150"><ele>40.0</ele></trkpt>
      <trkpt lat="52.5310" lon="13.4160"><ele>41.0</ele></trkpt>
    </trkseg>
  </trk>
  <trk>
    <name>Track 3</name>
    <trkseg>
      <trkpt lat="52.5400" lon="13.4250"><ele>45.0</ele></trkpt>
      <trkpt lat="52.5410" lon="13.4260"><ele>46.0</ele></trkpt>
    </trkseg>
  </trk>
</gpx>
