tests/fixtures/invalid/duplicate_name.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <metadata>
    <name>First name</name>
    <name>Second name</name>
  </metadata>
</gpx>
